--- a/mental_health_analysis.ipynb
+++ b/mental_health_analysis.ipynb
@@ -17,6 +17,62 @@
    "source": [
     "# Data Scrapping"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c2bbce6f",
+   "metadata": {},
+   "source": [
+    "Reddit data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d39e0b29",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f2d5613c",
+   "metadata": {},
+   "source": [
+    "Beyond Blue forums "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "32177c69",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a2cf93aa",
+   "metadata": {},
+   "source": [
+    "Climate data API"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "53210b15",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "78036975",
+   "metadata": {},
+   "source": [
+    "# Nature Language Process\n"
+   ]
   }
  ],
  "metadata": {
