--- a/mental_health_analysis.ipynb
+++ b/mental_health_analysis.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "d39e0b29",
    "metadata": {},
    "outputs": [],
@@ -275,11 +275,12 @@
     "\n",
     "def parse_post_date(raw_date):\n",
     "\n",
-    "    weekdays = list(calendar.day_name)\n",
+    "    weekdays = [day.lower() for day in list(calendar.day_name) ]\n",
     "    today = datetime.now()\n",
     "\n",
-    "    raw_date = raw_date.strip()\n",
+    "    raw_date = raw_date.strip().lower()  \n",
     "\n",
+    "    # Case 1: Day of the week (e.g., \"Monday\")\n",
     "    if raw_date in weekdays:\n",
     "        # Get weekday index: Monday = 0, Sunday = 6\n",
     "        post_weekday_index = weekdays.index(raw_date)\n",
@@ -287,11 +288,26 @@
     "\n",
     "        # Calculate difference in days\n",
     "        delta_days = (today_weekday_index - post_weekday_index) % 7\n",
-    "\n",
     "        # Get actual date\n",
     "        post_date = today - timedelta(days=delta_days)\n",
     "        return post_date.strftime('%Y-%m-%d')  # Format as YYYY-MM-DD\n",
+    "    \n",
+    "    # Case 2: \"a week ago\", \"2 weeks ago\", etc.\n",
+    "    elif \"week\" in raw_date:\n",
+    "        match = re.search(r'(\\d+)', raw_date)\n",
+    "        weeks = int(match.group(1)) if match else 1\n",
+    "        post_date = today - timedelta(weeks=weeks)\n",
+    "        return post_date.strftime('%Y-%m-%d')\n",
     "\n",
+    "    # Case 3: \"a month ago\", \"2 months ago\", etc.\n",
+    "    elif \"month\" in raw_date:\n",
+    "        match = re.search(r'(\\d+)', raw_date)\n",
+    "        months = int(match.group(1)) if match else 1\n",
+    "        # Approximate a month as 30 days\n",
+    "        post_date = today - timedelta(days=30 * months)\n",
+    "        return post_date.strftime('%Y-%m-%d')\n",
+    "    \n",
+    "    # Case 4: Exact date format like \"11-05-2025\"\n",
     "    else:\n",
     "        # Try parsing date in the format like \"25-09-2020\"\n",
     "        try:\n",
@@ -307,15 +323,9 @@
     "\n",
     "\n",
     "\n",
-    "# post_variables = [\"Post ID\", \"Post Content\", \"Post Author\", \"Post Date\", \"Post Category\", \"Number of Comments\"]\n",
-    "mental_health_type =['Anxiety','Depression','PTSD and trauma','Suicidal thoughts and self-harm']\n",
     "\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "def beyondblue_scrapping(tag,address):\n",
+    "def beyondblue_scrapping(tag,address,pages=2):\n",
     "\n",
     "\n",
     "    # Setup Chrome WebDriver\n",
@@ -327,11 +337,11 @@
     "\n",
     "\n",
     "\n",
-    "    for page in tqdm(range(1, 20), desc=\"Scraping pages\"):\n",
+    "    for page in tqdm(range(1, pages), desc=\"Scraping pages\"):\n",
     "\n",
     "    \n",
     "        driver.get(url)\n",
-    "        time.sleep(3)  # Wait for the page to load\n",
+    "        # time.sleep(3)  # Wait for the page to load\n",
     "\n",
     "\n",
     "        # get the class \"custom-message-list all-discussions\"\n",
@@ -344,7 +354,9 @@
     "        for post in discussions:\n",
     "\n",
     "            # Extracting post id\n",
-    "            post_id = post.get('class')[-1] if post.get('class') else \"\"\n",
+    "            post_link = post.find('h3').find_all('a')[1].get('href')\n",
+    "            post_id = post_link.split('/')[-1]  \n",
+    "            \n",
     "\n",
     "            # Extracting post title\n",
     "            title_tag = post.find_all('h3')[0].find_all('a')[1]\n",
@@ -358,6 +370,9 @@
     "            side_info1 = side_info.find('div', class_='custom-tile-author-info') if side_info else None\n",
     "            # Extracting post author\n",
     "            post_author = side_info1.find('a').find('span').text.strip() if side_info and side_info.find('span') else \"\"\n",
+    "\n",
+    "            author_link = post.find('aside').find('div', class_='custom-tile-author-info').find('a').get('href')\n",
+    "            user_id = author_link.split('user-id/')[-1]\n",
     "\n",
     "\n",
     "            side_info2 = side_info.find('div', class_='custom-tile-category-content')\n",
@@ -384,12 +399,16 @@
     "                \"Post Title\": post_title,\n",
     "                \"Post Content\": post_content,\n",
     "                \"Post Author\": post_author,\n",
+    "                \"User ID\": user_id,\n",
     "                \"Post Date\": post_date,\n",
     "                \"Post Category\": post_tag,\n",
     "                \"Number of Comments\": post_comments\n",
     "            }\n",
     "            whole_data.append(post_data)\n",
     "\n",
+    "\n",
+    "        # Print the number of posts scraped on the current page\n",
+    "        # print(f\"Tag: {tag} Page {page}: Scraped {len(discussions)} posts.\")\n",
     "\n",
     "        # Find next page link\n",
     "        next_page = soup.find('li', class_='lia-paging-page-next')\n",
@@ -403,10 +422,23 @@
     "    driver.quit()\n",
     "\n",
     "\n",
-    "    # Convert to DataFrame\n",
+    "    # Convert to DataFrame \n",
     "    df = pd.DataFrame(whole_data)\n",
-    "    # Save to CSV\n",
+    "    # delete duplicates by Post ID\n",
+    "    df = df.drop_duplicates(subset='Post ID').reset_index(drop=True)\n",
+    "    # Convert 'Post Date' to datetime format\n",
+    "    df['Post Date'] = pd.to_datetime(df['Post Date'], errors='coerce')\n",
+    "    # Sort by 'Post Date' in descending order\n",
+    "    df = df.sort_values(by='Post Date', ascending=False).reset_index(drop=True)\n",
+    "\n",
+    "    # check if the file already exists\n",
+    "    if os.path.exists(f'./data/beyondblue_data/{tag}_beyondblue_posts.csv'):\n",
+    "        existing_df = pd.read_csv(f'./data/beyondblue_data/{tag}_beyondblue_posts.csv')\n",
+    "        df = pd.concat([existing_df, df]).drop_duplicates(subset='Post ID').reset_index(drop=True)\n",
+    "\n",
     "    df.to_csv(f'./data/beyondblue_data/{tag}_beyondblue_posts.csv', index=False)\n",
+    "        \n",
+    "        \n",
     "    print(f\"Data saved to ./data/beyondblue_data/{tag}_beyondblue_posts.csv\")\n",
     "\n",
     "\n",
@@ -416,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "50df711d",
    "metadata": {},
    "outputs": [
@@ -424,7 +456,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Scraping pages: 100%|██████████| 4/4 [00:18<00:00,  4.65s/it]\n"
+      "Scraping pages: 100%|██████████| 199/199 [04:25<00:00,  1.33s/it]\n"
      ]
     },
     {
@@ -438,7 +470,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Scraping pages: 100%|██████████| 4/4 [00:19<00:00,  4.86s/it]\n"
+      "Scraping pages: 100%|██████████| 199/199 [05:36<00:00,  1.69s/it]\n",
+      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_6060\\3116285400.py:202: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "  df['Post Date'] = pd.to_datetime(df['Post Date'], errors='coerce')\n"
      ]
     },
     {
@@ -452,7 +486,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Scraping pages: 100%|██████████| 4/4 [00:21<00:00,  5.43s/it]\n"
+      "Scraping pages: 100%|██████████| 199/199 [05:34<00:00,  1.68s/it]\n"
      ]
     },
     {
@@ -466,7 +500,21 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Scraping pages: 100%|██████████| 4/4 [00:20<00:00,  5.16s/it]\n"
+      "Scraping pages:  65%|██████▌   | 130/199 [03:38<01:55,  1.68s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No more pages to scrape.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     },
     {
@@ -475,20 +523,147 @@
      "text": [
       "Data saved to ./data/beyondblue_data/Suicidal_thoughts_and_self-harm_beyondblue_posts.csv\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Scraping pages: 100%|██████████| 199/199 [05:27<00:00,  1.64s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data saved to ./data/beyondblue_data/Relationship and family issues_beyondblue_posts.csv\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Scraping pages: 100%|██████████| 199/199 [04:34<00:00,  1.38s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data saved to ./data/beyondblue_data/Young people_beyondblue_posts.csv\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Scraping pages:  39%|███▊      | 77/199 [02:13<03:31,  1.74s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No more pages to scrape.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "C:\\Users\\user\\AppData\\Local\\Temp\\ipykernel_6060\\3116285400.py:202: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "  df['Post Date'] = pd.to_datetime(df['Post Date'], errors='coerce')\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data saved to ./data/beyondblue_data/Sexuality and gender identity_beyondblue_posts.csv\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Scraping pages:  13%|█▎        | 25/199 [00:46<05:21,  1.85s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No more pages to scrape.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data saved to ./data/beyondblue_data/Multicultural experiences_beyondblue_posts.csv\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Scraping pages:  44%|████▎     | 87/199 [02:29<03:12,  1.72s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No more pages to scrape.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data saved to ./data/beyondblue_data/Grief and loss_beyondblue_posts.csv\n"
+     ]
     }
    ],
    "source": [
+    "# post_variables = [\"Post ID\", \"Post Content\", \"Post Author\", \"Post Date\", \"Post Category\", \"Number of Comments\"]\n",
+    "# mental_health_type =['Anxiety','Depression','PTSD and trauma','Suicidal thoughts and self-harm']\n",
+    "\n",
+    "\n",
+    "\n",
     "mental_health_urls = {\n",
     "    \"Anxiety\": \"https://forums.beyondblue.org.au/t5/anxiety/bd-p/c1-sc2-b1?&sort=recent\",\n",
     "    \"Depression\": \"https://forums.beyondblue.org.au/t5/depression/bd-p/c1-sc2-b2?&sort=recent\",\n",
     "    \"PTSD\": \"https://forums.beyondblue.org.au/t5/ptsd-and-trauma/bd-p/c1-sc2-b3?&sort=recent\",\n",
-    "    \"Suicidal_thoughts_and_self-harm\": \"https://forums.beyondblue.org.au/t5/suicidal-thoughts-and-self-harm/bd-p/c1-sc2-b4?&sort=recent\"\n",
+    "    \"Suicidal_thoughts_and_self-harm\": \"https://forums.beyondblue.org.au/t5/suicidal-thoughts-and-self-harm/bd-p/c1-sc2-b4?&sort=recent\",\n",
+    "    \"Relationship and family issues\":\"https://forums.beyondblue.org.au/t5/relationship-and-family-issues/bd-p/c1-sc3-b3?&sort=recent\",\n",
+    "    \"Young people\":\"https://forums.beyondblue.org.au/t5/young-people/bd-p/c1-sc4-b1?&sort=recent\",\n",
+    "    \"Sexuality and gender identity\":\"https://forums.beyondblue.org.au/t5/sexuality-and-gender-identity/bd-p/c1-sc4-b2?&sort=recent\",\n",
+    "    \"Multicultural experiences\":\"https://forums.beyondblue.org.au/t5/multicultural-experiences/bd-p/c1-sc4-b3?&sort=recent\",\n",
+    "    \"Grief and loss\":\"https://forums.beyondblue.org.au/t5/grief-and-loss/bd-p/c1-sc4-b4?&sort=recent\",\n",
     "}\n",
+    "\n",
+    "each_data_number = 2000\n",
+    "pages = each_data_number // 10  # Assuming each page has 10 posts\n",
     "\n",
     "\n",
     "for tag, address in mental_health_urls.items():\n",
     "    try:\n",
-    "        beyondblue_scrapping(tag, address)\n",
+    "        beyondblue_scrapping(tag, address, pages = pages)\n",
     "    except Exception as e:\n",
     "        print(f\"Error scraping {tag}: {e}\")\n",
     "        continue"
@@ -496,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "087e68d1",
    "metadata": {},
    "outputs": [
@@ -504,10 +679,47 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(40, 7)\n",
-      "(40, 7)\n",
-      "(40, 7)\n",
-      "(40, 7)\n"
+      "(1990, 8)\n",
+      "      Post ID                          Post Title  \\\n",
+      "0      611174                Peripheral Neuropahy   \n",
+      "1      611132                 Apprentice mechanic   \n",
+      "2      611126              Depression and Anxiety   \n",
+      "3      611099  Easy strategies for quick response   \n",
+      "4      611075                                Help   \n",
+      "...       ...                                 ...   \n",
+      "1985    56941          Scared to death, OF DEATH.   \n",
+      "1986    38359         Severe paranoia and anxiety   \n",
+      "1987    37072                      Health Anxiety   \n",
+      "1988    37038                  Feeling very angry   \n",
+      "1989    94973              Running out of excuses   \n",
+      "\n",
+      "                                           Post Content     Post Author  \\\n",
+      "0     Has anyone has success with HBOT Therapy for P...  Guest_55166016   \n",
+      "1     I'm 4 months in to my apprenticeship and em st...  Guest_28908038   \n",
+      "2     I am currently an international student. I alr...  Guest_16677420   \n",
+      "3     Recently my anxiety has 'flared'. As soon as I...         Olive83   \n",
+      "4     Just need help processing things, been diagnos...  Guest_91699169   \n",
+      "...                                                 ...             ...   \n",
+      "1985  To all the fellow sufferers of anxiety, Ever s...         Chin_Up   \n",
+      "1986  Hi all, I'm quite new to this so forgive me if...             Bes   \n",
+      "1987  Hi there, I heard Beyond Blue advertised on th...       Buckley05   \n",
+      "1988  I have just read that Jeff Kennett thinks that...         Maxwell   \n",
+      "1989  I'm 45 and running out of excuses for not atte...           lidia   \n",
+      "\n",
+      "      User ID   Post Date Post Category  Number of Comments  \n",
+      "0       55404  2025-06-11       Anxiety                   0  \n",
+      "1       55389  2025-06-10       Anxiety                   3  \n",
+      "2       55388  2025-06-10       Anxiety                   1  \n",
+      "3       55379  2025-06-09       Anxiety                   3  \n",
+      "4       55371  2025-06-08       Anxiety                   1  \n",
+      "...       ...         ...           ...                 ...  \n",
+      "1985    13511  2013-06-17       Anxiety                  35  \n",
+      "1986    37963  2013-05-09       Anxiety                   4  \n",
+      "1987    13331  2013-05-06       Anxiety                   1  \n",
+      "1988     8120  2013-05-06       Anxiety                   2  \n",
+      "1989    19542  2013-04-06       Anxiety                   5  \n",
+      "\n",
+      "[1990 rows x 8 columns]\n"
      ]
     }
    ],
@@ -520,7 +732,10 @@
     "df_self_harm = pd.read_csv('./data/beyondblue_data/Suicidal_thoughts_and_self-harm_beyondblue_posts.csv')\n",
     "\n",
     "\n",
+    "\n",
     "print(df_anxiety.shape)\n",
+    "# print(df_anxiety)\n",
+    "\n",
     "print(df_depression.shape)  \n",
     "print(df_ptsd.shape)\n",
     "print(df_self_harm.shape)"
