--- a/mental_health_analysis.ipynb
+++ b/mental_health_analysis.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "d39e0b29",
    "metadata": {},
    "outputs": [],
@@ -68,6 +68,10 @@
     "import json\n",
     "import pandas as pd\n",
     "import praw\n",
+    "import emoji\n",
+    "import emot\n",
+    "\n",
+    "\n",
     "\n",
     "import os\n",
     "from dotenv import load_dotenv\n",
@@ -91,6 +95,9 @@
     "        \n",
     "        self.headers[\"Authorization\"] = f'bearer {self.res.json()[\"access_token\"]}'\n",
     "\n",
+    "\n",
+    "\n",
+    "\n",
     "    def get_posts_byrequests(self, subreddit, limit=1000):\n",
     "        url = f'https://oauth.reddit.com/r/{subreddit}/hot'\n",
     "        params = {'limit': limit}\n",
@@ -103,6 +110,17 @@
     "        \n",
     "\n",
     "\n",
+    "    def convert_emojis_emoticons(self, text):\n",
+    "        e = emot()\n",
+    "        extracted = e.extract(text)\n",
+    "        for original, meaning in zip(extracted['value'], extracted['mean']):\n",
+    "            text = text.replace(original, f\" {meaning} \")\n",
+    "\n",
+    "        #convert any unicode emoji\n",
+    "        text = emoji.demojize(text)  \n",
+    "\n",
+    "        return text.strip().lower()\n",
+    "        \n",
     "\n",
     "\n",
     "    def get_posts_byprawn(self, subreddits, limit=1000, mental=\"mental_\"):\n",
@@ -129,19 +147,28 @@
     "                for post in posts:\n",
     "                    if post is None:\n",
     "                        continue\n",
+    "\n",
+    "                     # Load comments\n",
+    "                    post.comments.replace_more(limit=0)  # Load top-level only\n",
+    "                    top_comments_raw  = [comment.body for comment in post.comments[:5]]  # Top 5 comments\n",
+    "                     # Convert emojis/emoticons in comments\n",
+    "                    top_comments = [self.convert_emojis_emoticons(c) for c in top_comments_raw]\n",
+    "\n",
+    "\n",
     "                    all_posts.append({\n",
     "                        'id': post.id,\n",
     "                        'subreddit': subreddit,\n",
     "                        'sort': sort,  # Add sort type for tracking\n",
-    "                        'title': post.title,\n",
-    "                        'selftext': post.selftext,\n",
+    "                        'title': self.convert_emojis_emoticons(post.title),\n",
+    "                        'selftext': self.convert_emojis_emoticons(post.selftext),\n",
     "                        'created_utc': post.created_utc,\n",
     "                        'score': post.score,\n",
     "                        'num_comments': post.num_comments,\n",
     "                        'author': str(post.author),\n",
     "                        'url': post.url,\n",
     "                        'over_18': post.over_18,\n",
-    "                        'flair': post.link_flair_text\n",
+    "                        'flair': post.link_flair_text,\n",
+    "                        'top_comments': top_comments\n",
     "                    })\n",
     "\n",
     "\n",
@@ -153,6 +180,12 @@
     "        df = pd.DataFrame(all_posts)\n",
     "        df['created_utc'] = pd.to_datetime(df['created_utc'], unit='s')\n",
     "        df = df.sort_values(by='created_utc', ascending=False).reset_index(drop=True)\n",
+    "        # Convert list of comments to string for CSV storage\n",
+    "        df['top_comments'] = df['top_comments'].apply(lambda x: ' | '.join(x) if isinstance(x, list) else '')\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "        # check if f'./data/reddit_data/{mental}reddit_posts.csv' exists, if so merging with df and # delete dupicates by id\n",
     "        if os.path.exists(f'./data/reddit_data/{mental}reddit_posts.csv'):\n",
@@ -319,6 +352,64 @@
     "\n",
     "\n",
     "\n",
+    "def convert_emojis_emoticons(text):\n",
+    "    e = emot()\n",
+    "    extracted = e.extract(text)\n",
+    "    for original, meaning in zip(extracted['value'], extracted['mean']):\n",
+    "        text = text.replace(original, f\" {meaning} \")\n",
+    "\n",
+    "    #convert any unicode emoji\n",
+    "    text = emoji.demojize(text)  \n",
+    "\n",
+    "    return text.strip().lower()\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "def comment_scrapping (url, driver, pages = 1):\n",
+    "\n",
+    "    # return list of comments\n",
+    "\n",
+    "    list_comments = []\n",
+    "\n",
+    "    for page in tqdm(range(1, pages + 1), desc=\"Scraping comments\"):\n",
+    "\n",
+    "        driver.get(url)\n",
+    "        time.sleep(1)\n",
+    "        soup = BeautifulSoup(driver.page_source, 'html.parser')\n",
+    "        comments_section = soup.find('div', class_='linear-message-list message-list')\n",
+    "        every_comments = comments_section.find_all('div')\n",
+    "\n",
+    "\n",
+    "        for comment in every_comments:\n",
+    "\n",
+    "            main_section = comment.find('div', class_='lia-quilt-row lia-quilt-row-message-main') if comment.find('div', class_='lia-quilt-row lia-quilt-row-message-main') else None\n",
+    "            if not main_section:\n",
+    "                continue\n",
+    "            # scrapping all the text \n",
+    "            comment_text = main_section.get_text(strip=True) if main_section else \"\"\n",
+    "            comment_text = convert_emojis_emoticons(comment_text)\n",
+    "\n",
+    "            list_comments.append(comment_text)\n",
+    "\n",
+    "        # Find next page link\n",
+    "        \n",
+    "\n",
+    "\n",
+    "\n",
+    "        \n",
+    "        \n",
+    "\n",
+    "    \n",
+    "\n",
+    "    return list_comments\n",
+    "\n",
+    "\n",
+    "        \n",
+    "\n",
+    "\n",
+    "\n",
+    "    \n",
     "\n",
     "\n",
     "\n",
@@ -337,7 +428,7 @@
     "\n",
     "\n",
     "\n",
-    "    for page in tqdm(range(1, pages), desc=\"Scraping pages\"):\n",
+    "    for page in tqdm(range(1, pages + 1), desc=\"Scraping pages\"):\n",
     "\n",
     "    \n",
     "        driver.get(url)\n",
@@ -356,14 +447,17 @@
     "            # Extracting post id\n",
     "            post_link = post.find('h3').find_all('a')[1].get('href')\n",
     "            post_id = post_link.split('/')[-1]  \n",
+    "\n",
+    "            # extract comments from post_link\n",
+    "            comments = comment_scrapping(post_id, driver, pages=1)\n",
     "            \n",
     "\n",
     "            # Extracting post title\n",
     "            title_tag = post.find_all('h3')[0].find_all('a')[1]\n",
-    "            post_title = title_tag.text.strip() if title_tag else \"\"\n",
+    "            post_title = convert_emojis_emoticons(title_tag.text.strip()) if title_tag else \"\"\n",
     "\n",
     "            # Extracting post content\n",
-    "            post_content = post.find('p', class_ = 'body-text').text.strip() if post.find('p', class_ = 'body-text') else \"\"\n",
+    "            post_content = convert_emojis_emoticons(post.find('p', class_ = 'body-text').text.strip()) if post.find('p', class_ = 'body-text') else \"\"\n",
     "            \n",
     "\n",
     "            side_info = post.find('aside')\n",
@@ -372,15 +466,19 @@
     "            post_author = side_info1.find('a').find('span').text.strip() if side_info and side_info.find('span') else \"\"\n",
     "\n",
     "            author_link = post.find('aside').find('div', class_='custom-tile-author-info').find('a').get('href')\n",
+    "            # Extracting user id from author link\n",
     "            user_id = author_link.split('user-id/')[-1]\n",
+    "\n",
+    "            \n",
     "\n",
     "\n",
     "            side_info2 = side_info.find('div', class_='custom-tile-category-content')\n",
     "            # Extracting post tag\n",
     "            post_tag = side_info2.find('a').text.strip() if side_info2 and side_info2.find('a') else \"\"\n",
     "            \n",
-    "            # Extracting post date\n",
+    "            \n",
     "            raw_date = side_info2.find('time').text.strip() if side_info2 and side_info2.find('time') else \"\"\n",
+    "            # Extracting post date\n",
     "            post_date = parse_post_date(raw_date)\n",
     "\n",
     "\n",
@@ -392,7 +490,10 @@
     "            post_unread = int(match.group()) if match else 0\n",
     "\n",
     "            # Extracting number of comments\n",
-    "            post_comments = post.find('li', class_ = 'custom-tile-replies').find('b').text.strip() if post.find('li', class_ = 'custom-tile-replies') else \"\"\n",
+    "            number_comments = post.find('li', class_ = 'custom-tile-replies').find('b').text.strip() if post.find('li', class_ = 'custom-tile-replies') else \"\"\n",
+    "\n",
+    "\n",
+    "            \n",
     "\n",
     "            post_data = {\n",
     "                \"Post ID\": post_id,\n",
@@ -402,7 +503,8 @@
     "                \"User ID\": user_id,\n",
     "                \"Post Date\": post_date,\n",
     "                \"Post Category\": post_tag,\n",
-    "                \"Number of Comments\": post_comments\n",
+    "                \"Number of Comments\": number_comments,\n",
+    "                \"Comments\": comments\n",
     "            }\n",
     "            whole_data.append(post_data)\n",
     "\n",
@@ -646,15 +748,15 @@
     "\n",
     "\n",
     "mental_health_urls = {\n",
-    "    \"Anxiety\": \"https://forums.beyondblue.org.au/t5/anxiety/bd-p/c1-sc2-b1?&sort=recent\",\n",
-    "    \"Depression\": \"https://forums.beyondblue.org.au/t5/depression/bd-p/c1-sc2-b2?&sort=recent\",\n",
-    "    \"PTSD\": \"https://forums.beyondblue.org.au/t5/ptsd-and-trauma/bd-p/c1-sc2-b3?&sort=recent\",\n",
-    "    \"Suicidal_thoughts_and_self-harm\": \"https://forums.beyondblue.org.au/t5/suicidal-thoughts-and-self-harm/bd-p/c1-sc2-b4?&sort=recent\",\n",
-    "    \"Relationship and family issues\":\"https://forums.beyondblue.org.au/t5/relationship-and-family-issues/bd-p/c1-sc3-b3?&sort=recent\",\n",
-    "    \"Young people\":\"https://forums.beyondblue.org.au/t5/young-people/bd-p/c1-sc4-b1?&sort=recent\",\n",
-    "    \"Sexuality and gender identity\":\"https://forums.beyondblue.org.au/t5/sexuality-and-gender-identity/bd-p/c1-sc4-b2?&sort=recent\",\n",
-    "    \"Multicultural experiences\":\"https://forums.beyondblue.org.au/t5/multicultural-experiences/bd-p/c1-sc4-b3?&sort=recent\",\n",
-    "    \"Grief and loss\":\"https://forums.beyondblue.org.au/t5/grief-and-loss/bd-p/c1-sc4-b4?&sort=recent\",\n",
+    "    \"Anxiety\": \"https://forums.beyondblue.org.au/t5/anxiety/bd-p/c1-sc2-b1?&sort=kudos\",\n",
+    "    \"Depression\": \"https://forums.beyondblue.org.au/t5/depression/bd-p/c1-sc2-b2?&sort=kudos\",\n",
+    "    \"PTSD\": \"https://forums.beyondblue.org.au/t5/ptsd-and-trauma/bd-p/c1-sc2-b3?&sort=kudos\",\n",
+    "    \"Suicidal_thoughts_and_self-harm\": \"https://forums.beyondblue.org.au/t5/suicidal-thoughts-and-self-harm/bd-p/c1-sc2-b4?&sort=kudos\",\n",
+    "    \"Relationship and family issues\":\"https://forums.beyondblue.org.au/t5/relationship-and-family-issues/bd-p/c1-sc3-b3?&sort=kudos\",\n",
+    "    \"Young people\":\"https://forums.beyondblue.org.au/t5/young-people/bd-p/c1-sc4-b1?&sort=kudos\",\n",
+    "    \"Sexuality and gender identity\":\"https://forums.beyondblue.org.au/t5/sexuality-and-gender-identity/bd-p/c1-sc4-b2?&sort=kudos\",\n",
+    "    \"Multicultural experiences\":\"https://forums.beyondblue.org.au/t5/multicultural-experiences/bd-p/c1-sc4-b3?&sort=kudos\",\n",
+    "    \"Grief and loss\":\"https://forums.beyondblue.org.au/t5/grief-and-loss/bd-p/c1-sc4-b4?&sort=kudos\",\n",
     "}\n",
     "\n",
     "each_data_number = 2000\n",
