--- a/mental_health_analysis.ipynb
+++ b/mental_health_analysis.ipynb
@@ -58,19 +58,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "id": "d39e0b29",
    "metadata": {},
    "outputs": [],
    "source": [
     "# scrapping data from reddit api\n",
     "import requests\n",
-    "import json\n",
     "import pandas as pd\n",
     "import praw\n",
     "import emoji\n",
     "import emot\n",
-    "\n",
+    "import asyncpraw\n",
+    "import asyncio\n",
+    "from tqdm import tqdm\n",
     "\n",
     "\n",
     "import os\n",
@@ -97,6 +98,14 @@
     "\n",
     "\n",
     "\n",
+    "        self.client_id = os.getenv('CLIENT_ID')\n",
+    "        self.client_secret = os.getenv('CLIENT_SECRET')\n",
+    "        self.username = os.getenv('USERNAME')\n",
+    "        self.password = os.getenv('PASSWORD')\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "    def get_posts_byrequests(self, subreddit, limit=1000):\n",
     "        url = f'https://oauth.reddit.com/r/{subreddit}/hot'\n",
@@ -111,79 +120,86 @@
     "\n",
     "\n",
     "    def convert_emojis_emoticons(self, text):\n",
-    "        e = emot()\n",
-    "        extracted = e.extract(text)\n",
-    "        for original, meaning in zip(extracted['value'], extracted['mean']):\n",
+    "        e = emot.core.emot()\n",
+    "\n",
+    "        # Extract emoticons\n",
+    "        emoticon_results = e.emoticons(text)\n",
+    "        for original, meaning in zip(emoticon_results['value'], emoticon_results['mean']):\n",
     "            text = text.replace(original, f\" {meaning} \")\n",
     "\n",
-    "        #convert any unicode emoji\n",
-    "        text = emoji.demojize(text)  \n",
+    "        # Extract emojis\n",
+    "        # emoji_results = e.emoji(text)\n",
+    "        # for original, meaning in zip(emoji_results['value'], emoji_results['mean']):\n",
+    "        #     text = text.replace(original, f\" {meaning} \")\n",
+    "\n",
+    "        text = emoji.demojize(text)\n",
+    "\n",
+    "\n",
     "\n",
     "        return text.strip().lower()\n",
     "        \n",
     "\n",
     "\n",
-    "    def get_posts_byprawn(self, subreddits, limit=1000, mental=\"mental_\"):\n",
+    "    async def get_posts_byprawn(self, subreddits, limit=1000, mental=\"mental_\"):\n",
     "\n",
-    "        reddit = praw.Reddit(client_id=os.getenv('CLIENT_ID'),\n",
-    "                             client_secret=os.getenv('CLIENT_SECRET'),\n",
+    "        reddit = asyncpraw.Reddit(client_id=self.client_id,\n",
+    "                             client_secret=self.client_secret,\n",
     "                             user_agent='windows:mentalhealth.scraper:v1.0 (by u/IceWorth5480)',\n",
-    "                             username=os.getenv('USERNAME'),\n",
-    "                             password=os.getenv('PASSWORD'))\n",
+    "                             username=self.username,\n",
+    "                             password=self.password)\n",
     "        \n",
     "        all_posts = []\n",
-    "        sort_types = ['hot', 'top', 'new']\n",
+    "        # , 'top', 'new'\n",
+    "        sort_types = ['hot']\n",
     "\n",
     "\n",
-    "        for subreddit in subreddits:\n",
+    "        for subreddit_name in tqdm(subreddits, desc=\"Subreddits Progress\"):\n",
+    "            subreddit = await reddit.subreddit(subreddit_name)\n",
     "            for sort in sort_types:\n",
     "                if sort == 'hot':\n",
-    "                    posts = reddit.subreddit(subreddit).hot(limit=limit)\n",
+    "                    posts = subreddit.hot(limit=limit)\n",
     "                elif sort == 'top':\n",
-    "                    posts = reddit.subreddit(subreddit).top(limit=limit)\n",
+    "                    posts = subreddit.top(limit=limit)\n",
     "                elif sort == 'new':\n",
-    "                    posts = reddit.subreddit(subreddit).new(limit=limit)\n",
+    "                    posts = subreddit.new(limit=limit)\n",
     "\n",
-    "                for post in posts:\n",
+    "                async for post in posts:\n",
     "                    if post is None:\n",
     "                        continue\n",
     "\n",
-    "                     # Load comments\n",
-    "                    post.comments.replace_more(limit=0)  # Load top-level only\n",
-    "                    top_comments_raw  = [comment.body for comment in post.comments[:5]]  # Top 5 comments\n",
-    "                     # Convert emojis/emoticons in comments\n",
+    "                    # Load top-level comments (non-blocking)\n",
+    "                    await post.load()\n",
+    "                    await post.comments.replace_more(limit=0)\n",
+    "                    top_comments_raw = [comment.body for comment in post.comments[:5]]\n",
     "                    top_comments = [self.convert_emojis_emoticons(c) for c in top_comments_raw]\n",
-    "\n",
     "\n",
     "                    all_posts.append({\n",
     "                        'id': post.id,\n",
-    "                        'subreddit': subreddit,\n",
-    "                        'sort': sort,  # Add sort type for tracking\n",
-    "                        'title': self.convert_emojis_emoticons(post.title),\n",
+    "                        'subreddit': subreddit_name,\n",
+    "                        'sort': sort,\n",
+    "                        'title': post.title,\n",
     "                        'selftext': self.convert_emojis_emoticons(post.selftext),\n",
     "                        'created_utc': post.created_utc,\n",
     "                        'score': post.score,\n",
     "                        'num_comments': post.num_comments,\n",
     "                        'author': str(post.author),\n",
-    "                        'url': post.url,\n",
+    "                        'post_url': post.url,\n",
     "                        'over_18': post.over_18,\n",
     "                        'flair': post.link_flair_text,\n",
     "                        'top_comments': top_comments\n",
     "                    })\n",
     "\n",
+    "        await reddit.close()\n",
     "\n",
-    "        # delete dupicates by id\n",
-    "        all_posts = [dict(t) for t in {tuple(d.items()) for d in all_posts}]\n",
-    " \n",
     "\n",
     "\n",
     "        df = pd.DataFrame(all_posts)\n",
+    "        # Drop duplicates by post ID\n",
+    "        df = df.drop_duplicates(subset='id').reset_index(drop=True)\n",
     "        df['created_utc'] = pd.to_datetime(df['created_utc'], unit='s')\n",
     "        df = df.sort_values(by='created_utc', ascending=False).reset_index(drop=True)\n",
     "        # Convert list of comments to string for CSV storage\n",
     "        df['top_comments'] = df['top_comments'].apply(lambda x: ' | '.join(x) if isinstance(x, list) else '')\n",
-    "\n",
-    "\n",
     "\n",
     "\n",
     "\n",
@@ -196,13 +212,8 @@
     "        df.to_csv(f'./data/reddit_data/{mental}reddit_posts.csv', index=False)\n",
     "\n",
     "\n",
-    "        \n",
-    "    def get_posts_byPushshift(self, subreddit, limit=1000):\n",
-    "        url = f'https://api.pushshift.io/reddit/search/submission/?subreddit={subreddit}&sort=desc&limit={limit}'\n",
-    "        response = requests.get(url)\n",
-    "        \n",
-    "        print(response.status_code)\n",
-    "        print(response.text)\n",
+    "\n",
+    "\n",
     "\n"
    ]
   },
@@ -213,17 +224,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mental_subreddits = ['mentalhealth', 'depression', 'anxiety', 'therapy', 'selfhelp', 'bpd', 'ptsd', 'socialanxiety', 'counseling']\n",
-    "normal_subreddits = ['popular','all','AskReddit','interestingasfuck']\n",
-    "test = RedditScraper()\n",
+    "# import asyncio\n",
     "\n",
-    "test.get_posts_byprawn(mental_subreddits, limit=1000,mental=\"mental_\")\n",
-    "test.get_posts_byprawn(normal_subreddits, limit=1000, mental=\"normal_\")"
+    "\n",
+    "\n",
+    "# , 'depression', 'anxiety', 'therapy', 'selfhelp', 'bpd', 'ptsd', 'socialanxiety', 'counseling'\n",
+    "mental_subreddits = ['mentalhealth', 'depression', 'anxiety', 'therapy', 'selfhelp', 'bpd', 'ptsd', 'socialanxiety', 'counseling']\n",
+    "australian_regions = ['melbourne','sydney','adelaide','perth','brisbane','canberra']\n",
+    "normal_subreddits = ['popular','all','AskReddit','interestingasfuck']\n",
+    "\n",
+    "\n",
+    "\n",
+    "scraper  = RedditScraper()\n",
+    "\n",
+    "\n",
+    "await scraper.get_posts_byprawn(mental_subreddits, limit=1000, mental=\"mental_\")\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "id": "1a6a469d",
    "metadata": {},
    "outputs": [
@@ -231,8 +253,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(15877, 12)\n",
-      "(6878, 12)\n"
+      "(93, 13)\n"
      ]
     }
    ],
@@ -240,10 +261,10 @@
     "# read the csv file \n",
     "\n",
     "df_mental = pd.read_csv('./data/reddit_data/mental_reddit_posts.csv')\n",
-    "df_normal = pd.read_csv('./data/reddit_data/normal_reddit_posts.csv')\n",
-    "\n",
     "print(df_mental.shape)\n",
-    "print(df_normal.shape)"
+    "\n",
+    "# df_normal = pd.read_csv('./data/reddit_data/normal_reddit_posts.csv')\n",
+    "# print(df_normal.shape)"
    ]
   },
   {
@@ -256,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "175d8a76",
    "metadata": {},
    "outputs": [],
@@ -301,6 +322,8 @@
     "\n",
     "\n",
     "from tqdm import tqdm\n",
+    "import emoji\n",
+    "import emot\n",
     "\n",
     "\n",
     "\n",
@@ -353,30 +376,43 @@
     "\n",
     "\n",
     "def convert_emojis_emoticons(text):\n",
-    "    e = emot()\n",
-    "    extracted = e.extract(text)\n",
-    "    for original, meaning in zip(extracted['value'], extracted['mean']):\n",
+    "    e = emot.core.emot()\n",
+    "\n",
+    "    # Extract emoticons\n",
+    "    emoticon_results = e.emoticons(text)\n",
+    "\n",
+    "    for original, meaning in zip(emoticon_results['value'], emoticon_results['mean']):\n",
     "        text = text.replace(original, f\" {meaning} \")\n",
     "\n",
-    "    #convert any unicode emoji\n",
-    "    text = emoji.demojize(text)  \n",
+    "    # # Extract emojis\n",
+    "    # emoji_results = e.emoji(text)\n",
+    "    # for original, meaning in zip(emoji_results['value'], emoji_results['mean']):\n",
+    "    #     text = text.replace(original, f\" {meaning} \")\n",
+    "\n",
+    "    text = emoji.demojize(text)\n",
     "\n",
     "    return text.strip().lower()\n",
     "\n",
     "\n",
     "\n",
     "\n",
-    "def comment_scrapping (url, driver, pages = 1):\n",
+    "def comment_scrapping (url, comment_pages = 1):\n",
     "\n",
-    "    # return list of comments\n",
+    "    \n",
+    "    # Setup Chrome WebDriver\n",
+    "    service = Service(ChromeDriverManager().install())\n",
+    "    comment_driver = webdriver.Chrome(service=service)\n",
+    "\n",
+    "    \n",
+    "    \n",
     "\n",
     "    list_comments = []\n",
     "\n",
-    "    for page in tqdm(range(1, pages + 1), desc=\"Scraping comments\"):\n",
+    "    for page in range(1, comment_pages + 1):\n",
     "\n",
-    "        driver.get(url)\n",
-    "        time.sleep(1)\n",
-    "        soup = BeautifulSoup(driver.page_source, 'html.parser')\n",
+    "        comment_driver.get(url)\n",
+    "        time.sleep(0.05)\n",
+    "        soup = BeautifulSoup(comment_driver.page_source, 'html.parser')\n",
     "        comments_section = soup.find('div', class_='linear-message-list message-list')\n",
     "        every_comments = comments_section.find_all('div')\n",
     "\n",
@@ -387,32 +423,34 @@
     "            if not main_section:\n",
     "                continue\n",
     "            # scrapping all the text \n",
-    "            comment_text = main_section.get_text(strip=True) if main_section else \"\"\n",
+    "            comment_text = main_section.get_text(separator=' ', strip=True) if main_section else \"\"\n",
     "            comment_text = convert_emojis_emoticons(comment_text)\n",
-    "\n",
     "            list_comments.append(comment_text)\n",
     "\n",
+    "            # only scrapping the first 3 comments\n",
+    "            if len(list_comments) >= 3:\n",
+    "                break\n",
+    "\n",
     "        # Find next page link\n",
+    "        next_page = soup.find('li', class_='lia-paging-page-next')\n",
+    "        if next_page and next_page.find('a'):\n",
+    "            next_page_link = next_page.find('a')['href']\n",
+    "            url = next_page_link\n",
+    "        else:\n",
+    "            print(\"No more pages to scrape.\")\n",
+    "            break\n",
     "        \n",
+    "    # close the driver\n",
+    "    comment_driver.quit()\n",
     "\n",
-    "\n",
-    "\n",
-    "        \n",
-    "        \n",
-    "\n",
+    "    # change the list of comments to a string\n",
+    "    list_comments = ' | '.join(list_comments) if list_comments else \"\"\n",
     "    \n",
     "\n",
     "    return list_comments\n",
     "\n",
     "\n",
     "        \n",
-    "\n",
-    "\n",
-    "\n",
-    "    \n",
-    "\n",
-    "\n",
-    "\n",
     "\n",
     "\n",
     "\n",
@@ -448,8 +486,10 @@
     "            post_link = post.find('h3').find_all('a')[1].get('href')\n",
     "            post_id = post_link.split('/')[-1]  \n",
     "\n",
+    "\n",
+    "            full_post_link = f\"https://forums.beyondblue.org.au{post_link}\"\n",
     "            # extract comments from post_link\n",
-    "            comments = comment_scrapping(post_id, driver, pages=1)\n",
+    "            comments = comment_scrapping(full_post_link, comment_pages=1)\n",
     "            \n",
     "\n",
     "            # Extracting post title\n",
@@ -850,6 +890,12 @@
    "source": [
     "Climate data API"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2c274975",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
